--- a/connect4-backend/package.json
+++ b/connect4-backend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
