--- a/connect4-backend/package.json
+++ b/connect4-backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
